@@ -13,16 +13,16 @@ public class LoginController {
         GestoreUtenti gu = new GestoreUtenti();
         List<Utente> l =gu.cercaUtentePerEmail(email);
         if (l.isEmpty()) {return esito;}
-        else if(l.getFirst() instanceof Cliente && ruolo.equalsIgnoreCase("CLIENTE")){
-            Session.getInstance().setUtenteLoggato(l.getFirst());
+        else if(l.get(0) instanceof Cliente && ruolo.equalsIgnoreCase("CLIENTE")){
+            Session.getInstance().setUtenteLoggato(l.get(0));
             return true;
         }
-        else if(l.getFirst() instanceof Ristoratore && ruolo.equalsIgnoreCase("RISTORATORE")){
-            Session.getInstance().setUtenteLoggato(l.getFirst());
+        else if(l.get(0) instanceof Ristoratore && ruolo.equalsIgnoreCase("RISTORATORE")){
+            Session.getInstance().setUtenteLoggato(l.get(0));
             return true;
         }
-        else if(l.getFirst() instanceof Amministratore && ruolo.equalsIgnoreCase("AMMINISTRATORE")){
-            Session.getInstance().setUtenteLoggato(l.getFirst());
+        else if(l.get(0) instanceof Amministratore && ruolo.equalsIgnoreCase("AMMINISTRATORE")){
+            Session.getInstance().setUtenteLoggato(l.get(0));
             return true;
         }
         return false;
